--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <link rel="stylesheet" href="main.css">
-    <link rel="icon" type="image/x-icon" href="aaa.ico">
+    <link rel="icon" type="image/x-icon" href="images/aaa.ico">
 
     <meta charset="UTF-8">
     <meta name="robots" content="index,follow">
@@ -12,7 +12,7 @@
     <meta property="og:description" content="trossty">
     <meta property="og:title" content="Trossty">
     <meta property="og:url" content="https://trossty.lol">
-    <meta property="og:image" content="/aaa.png">
+    <meta property="og:image" content="/images/aaa.png">
     <meta property="og:image:alt" content="banner">
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:height" content="500">
@@ -27,7 +27,7 @@
     <div class="wrapper">
         <div class="hero-section">
             <div class="cow">
-                <img src="cow.gif" />
+                <img src="images/cow.gif" />
             </div>
 
 
@@ -55,7 +55,7 @@
 
                     </div>
                     <div class="box-image-div">
-                        <img src="trossty.png" class="box-img" />
+                        <img src="images/trossty.png" class="box-img" />
                     </div>
                 </div>
             </div>
@@ -72,7 +72,7 @@
                 <a class="projects-row" href="https://block.tc">
                 
                     <div class="projects-img">
-                        <img src="blocktc.png" width='100' />
+                        <img src="images/blocktc.png" width='100' />
                     </div>
                     <div class="projects-text">
                         <h3>BLOCK.TC</h3>
